--- a/templates/MainWindow.ui
+++ b/templates/MainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>928</width>
-    <height>654</height>
+    <width>902</width>
+    <height>680</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -120,21 +120,17 @@
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_2">
             <item>
-             <layout class="QFormLayout" name="formLayout_2">
-              <item row="0" column="0">
-               <widget class="QLabel" name="FileMaskLabel">
-                <property name="text">
-                 <string>FileMask</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="1">
-               <widget class="QLineEdit" name="FileMaskLine"/>
-              </item>
-             </layout>
+             <widget class="QLabel" name="Include_Type_Label">
+              <property name="text">
+               <string>Include File Types</string>
+              </property>
+             </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="setFilesMaskButton">
+             <widget class="QLineEdit" name="Include_Type_lineEdit"/>
+            </item>
+            <item>
+             <widget class="QPushButton" name="Include_Type_Button">
               <property name="text">
                <string>...</string>
               </property>
@@ -145,83 +141,26 @@
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_3">
             <item>
-             <layout class="QFormLayout" name="formLayout_3">
-              <item row="0" column="0">
-               <widget class="QLabel" name="label_2">
-                <property name="text">
-                 <string>TimePereod</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="1">
-               <widget class="QSpinBox" name="TimePereodSpinBox"/>
-              </item>
-             </layout>
+             <widget class="QLabel" name="Exclude_Type_Label">
+              <property name="text">
+               <string>Exclude File Types</string>
+              </property>
+             </widget>
             </item>
             <item>
-             <layout class="QFormLayout" name="formLayout_4">
-              <item row="0" column="0">
-               <widget class="QLabel" name="Time">
-                <property name="text">
-                 <string>TimeToLive</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="1">
-               <widget class="QSpinBox" name="TimeToLiveSpinBox"/>
-              </item>
-             </layout>
+             <widget class="QLineEdit" name="Exclude_Type_lineEdit"/>
+            </item>
+            <item>
+             <widget class="QPushButton" name="Exclude_Type_Button">
+              <property name="text">
+               <string>...</string>
+              </property>
+             </widget>
             </item>
            </layout>
           </item>
          </layout>
         </widget>
-       </item>
-       <item>
-        <widget class="QGroupBox" name="groupBox_2">
-         <property name="title">
-          <string>GroupBox</string>
-         </property>
-         <layout class="QVBoxLayout" name="verticalLayout_2">
-          <item>
-           <layout class="QFormLayout" name="formLayout_5">
-            <item row="0" column="0">
-             <widget class="QLabel" name="Src_2">
-              <property name="text">
-               <string>DirectoryMask</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="1">
-             <widget class="QLineEdit" name="DirectoryMask"/>
-            </item>
-            <item row="1" column="0">
-             <widget class="QLabel" name="Dest_2">
-              <property name="text">
-               <string>path</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="1">
-             <widget class="QLineEdit" name="DestPath_2"/>
-            </item>
-           </layout>
-          </item>
-         </layout>
-        </widget>
-       </item>
-       <item>
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
        </item>
        <item>
         <widget class="QPushButton" name="backupButton">
@@ -247,8 +186,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>928</width>
-     <height>21</height>
+     <width>902</width>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menufile">
